@@ -4,6 +4,7 @@
 - Info and history for LevelDB
 - Update libssh2 sources
 - Resolve ssh_address for Redis connection
+- SSH default path for private key(~/.ssh/id_rsa) and for public(~/.ssh/id_rsa.pub)
 
 0.1.4 / Jule 29, 2015
 - Display db name in console
